Create minimal layout for users index page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,7 @@ en:
   advanced: 'Advanced'
   upper_advanced: 'Upper Advanced'
   native: 'Native'
+  sure?: 'Are you sure?'
   application:
     hello: 'Hello'
     signup: 'Sign Up'
