Fix user edit issue
Remove input field 'current_password', because this way Devise allow the update without inform password

--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -34,6 +34,9 @@ pt-br:
     show:
       more_rooms: 'Mais salas'
       last_rooms: 'Últimas salas'
+    registrations:
+      edit:
+        settings: 'Configurações'
   activerecord:
     models:
       user: 'Usuário'
