--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,6 +34,9 @@ es:
     show:
       more_rooms: 'Más salas'
       last_rooms: '¡últimas salas'
+    registrations:
+      edit:
+        settings: 'Configuración'
   activerecord:
     models:
       user: 'Usuário'
