--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -43,12 +43,76 @@ pt-br:
       room:
         level: 'Nivel'
         language: 'Linguagem'
+      language:
+        level: Nivel
+        speak: Fala
+        write: Escrita
+      user:
+        first_name: 'Primeiro nome'
+        last_name: 'Sobrenome'
+        gender: 'Sexo'
+        born_on: 'Data de nascimento'
+        country: 'País'
+        phone: 'Telefone'
     errors:
       messages:
         record_invalid: 'A validação falhou: %{errors}'
         restrict_dependent_destroy:
           has_one: Não é possível excluir o registro pois existe um %{record} dependente
           has_many: Não é possível excluir o registro pois existem %{record} dependentes
+  date:
+    abbr_day_names:
+    - Dom
+    - Seg
+    - Ter
+    - Qua
+    - Qui
+    - Sex
+    - Sáb
+    abbr_month_names:
+    -
+    - Jan
+    - Fev
+    - Mar
+    - Abr
+    - Mai
+    - Jun
+    - Jul
+    - Ago
+    - Set
+    - Out
+    - Nov
+    - Dez
+    day_names:
+    - Domingo
+    - Segunda-feira
+    - Terça-feira
+    - Quarta-feira
+    - Quinta-feira
+    - Sexta-feira
+    - Sábado
+    formats:
+      default: "%d/%m/%Y"
+      long: "%d de %B de %Y"
+      short: "%d de %B"
+    month_names:
+    -
+    - Janeiro
+    - Fevereiro
+    - Março
+    - Abril
+    - Maio
+    - Junho
+    - Julho
+    - Agosto
+    - Setembro
+    - Outubro
+    - Novembro
+    - Dezembro
+    order:
+    - :day
+    - :month
+    - :year
   datetime:
     distance_in_words:
       about_x_hours:
@@ -88,11 +152,6 @@ pt-br:
       x_seconds:
         one: 1 segundo
         other: "%{count} segundos"
-  date:
-    formats:
-      default: "%d/%m/%Y"
-      long: "%d de %B de %Y"
-      short: "%d de %B"
   errors:
     format: "%{attribute} %{message}"
     messages:
@@ -194,3 +253,10 @@ pt-br:
       last_word_connector: " e "
       two_words_connector: " e "
       words_connector: ", "
+  time:
+    am: ''
+    formats:
+      default: "%a, %d de %B de %Y, %H:%M:%S %z"
+      long: "%d de %B de %Y, %H:%M"
+      short: "%d de %B, %H:%M"
+    pm: ''
