--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,10 @@ en:
   native: 'Native'
   sure?: 'Are you sure?'
   join_room: 'Join'
+  rooms_text: Rooms
+  posts_text: Posts
+  suggestions: Suggestions?
+  create_room: Create new room
   application:
     hello: 'Hello'
     signup: 'Sign Up'
@@ -31,6 +35,14 @@ en:
   users:
     show:
       more_rooms: 'More rooms'
+    update: User was sucessfully updated
+  rooms:
+    create:
+      notice: Room was sucessfully creted
+    update:
+      notice: Room was sucessfully updated
+    destroy:
+      notice: Room was sucessfully deleted
   formats:
       default: "%m-%d-%Y"
       long: "%B %d, %Y"
