Change the category type field to title
This was made because 'type' is a reserved word, for inhetance. Also was change the parameter for users, that is, when the user go to show page, on url is now follow the pattern 'id-username', instead of only id

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,20 @@ en:
   advanced: 'Advanced'
   upper_advanced: 'Upper Advanced'
   native: 'Native'
+  music: 'music'
+  travel: 'travel'
+  news: 'news'
+  tv_radio: 'tv and radio'
+  film: 'film'
+  book: 'book'
+  podcast: 'podcast'
+  humor: 'humor'
+  documentaries: 'documentaries'
+  articles: 'articles'
+  animation: 'animations'
+  quotes: 'quotes'
+  stories: 'stories'
+  others: 'others'
   sure?: 'Are you sure?'
   join_room: 'Join'
   rooms_text: Rooms
