--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,6 +10,20 @@ es:
   advanced: 'Avanzado'
   upper_advanced: 'Avanzado Superior'
   native: 'Nativo'
+  music: 'música'
+  travel: 'viajes'
+  news: 'noticias'
+  tv_radio: 'tv y radio'
+  film: 'películas'
+  book: 'libro'
+  podcast: 'podcast'
+  humor: 'humor'
+  documentaries: 'documentales'
+  articles: 'artículos'
+  animation: 'animación'
+  quotes: 'cotizaciones'
+  stories: 'historias'
+  others: 'otros'
   sure?: '¿Estás seguro?'
   join_room: Entrar
   rooms_text: Salas
