--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -10,6 +10,20 @@ pt-br:
   advanced: 'Avançado'
   upper_advanced: 'Avançado Superior'
   native: 'Nativo'
+  music: 'música'
+  travel: 'viagem'
+  news: 'noticias'
+  tv_radio: 'tv e radio'
+  film: 'filmes'
+  book: 'livros'
+  podcast: 'podcast'
+  humor: 'humor'
+  documentaries: 'documentarios'
+  articles: 'artigos'
+  animation: 'animações'
+  quotes: 'citações'
+  stories: 'histórias'
+  others: 'outros'
   sure?: 'Tem certeza?'
   join_room: Entrar
   rooms_text: Salas
