Create section on home page for debates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,6 +58,13 @@ en:
       notice: Room was sucessfully updated
     destroy:
       notice: Room was sucessfully deleted
+  debates:
+    create:
+      notice: Debate was sucessfully creted
+    update:
+      notice: Debate was sucessfully updated
+    destroy:
+      notice: Debate was sucessfully deleted
   formats:
       default: "%m-%d-%Y"
       long: "%B %d, %Y"
