Add section for 'my debates' on user home page

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -25,7 +25,8 @@ es:
   stories: 'historias'
   others: 'otros'
   sure?: '¿Estás seguro?'
-  join_room: Entrar
+  my_rooms: 'Mis salas'
+  my_debates: 'Mis debates'
   rooms_text: Salas
   posts_text: Artículos
   suggestions: u sugerencia
