--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,7 +26,7 @@ en:
   others: 'others'
   sure?: 'Are you sure?'
   rooms_text: Rooms
-  posts_text: Posts
+  articles_text: Posts
   suggestions: Suggestions?
   create_room: Create new room
   application:
