Add section for 'my articles'

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -27,6 +27,7 @@ es:
   sure?: '¿Estás seguro?'
   my_rooms: 'Mis salas'
   my_debates: 'Mis debates'
+  my_articles: 'Mis artículos'
   rooms_text: Salas
   articles_text: Artículos
   suggestions: sugerencia
