--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -27,6 +27,7 @@ pt-br:
   sure?: 'Tem certeza?'
   my_rooms: 'Minhas salas'
   my_debates: 'Meus debates'
+  my_articles: 'Mues artigos'
   rooms_text: Salas
   articles_text: Artigos
   suggestions: Sugestões?
