Implement rooms' search
Minor fix on translante and layout

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,7 @@ en:
   articles_text: Articles
   suggestions: Suggestions?
   create_room: Create new room
+  result_not_found: No results were found
   application:
     hello: 'Hello'
     signup: 'Sign Up'
