Add filters for debate
Fix some issue with seeds and layout

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,7 @@ en:
   podcast: 'podcast'
   humor: 'humor'
   documentaries: 'documentaries'
-  articles: 'articles'
+  posts: 'articles'
   animation: 'animations'
   quotes: 'quotes'
   stories: 'stories'
