Create inherent between article and debate
This definitely should be improv

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -97,7 +97,7 @@ es:
         level: Nivel
         speak: hablar
         write: escribir
-      debate:
+      posting:
         category: Categoría
         language: Lenguaje
       user:
