--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -97,7 +97,7 @@ pt-br:
         level: Nivel
         speak: Fala
         write: Escrita
-      debate:
+      posting:
         category: Categoria
         language: Linguagem
       user:
